[gd_scene load_steps=10 format=4 uid="uid://cq2hpwy5ct4io"]

[ext_resource type="Script" path="res://scripts/tap.gd" id="1_xli81"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_onfnh"]
data = PackedVector3Array(-0.0504, -0.3, -0.0504, 0.0504, 0.75, -0.0504, -0.0504, 0.75, -0.0504, -0.0504, -0.3, -0.0504, 0.0504, -0.3, -0.0504, 0.0504, 0.75, -0.0504, 0.0504, -0.3, -0.0504, 0.0504, 0.85, 0.0504, 0.0504, 0.75, -0.0504, 0.0504, -0.3, -0.0504, 0.0504, -0.3, 0.0504, 0.0504, 0.85, 0.0504, 0.0504, -0.3, 0.0504, -0.0504, 0.85, 0.0504, 0.0504, 0.85, 0.0504, 0.0504, -0.3, 0.0504, -0.0504, -0.3, 0.0504, -0.0504, 0.85, 0.0504, -0.0504, -0.3, -0.0504, 0.0504, -0.3, 0.0504, 0.0504, -0.3, -0.0504, -0.0504, -0.3, -0.0504, -0.0504, -0.3, 0.0504, 0.0504, -0.3, 0.0504, 0.0504, 0.75, -0.35, -0.0504, 0.85, -0.45, -0.0504, 0.75, -0.35, 0.0504, 0.75, -0.35, 0.0504, 0.85, -0.45, -0.0504, 0.85, -0.45, 0.0504, 0.6, -0.35, -0.0504, 0.75, -0.35, 0.0504, 0.75, -0.35, 0.0504, 0.6, -0.35, -0.0504, 0.6, -0.35, -0.0504, 0.75, -0.35, 0.0504, 0.6, -0.45, 0.0504, 0.75, -0.35, 0.0504, 0.85, -0.45, 0.0504, 0.6, -0.45, 0.0504, 0.6, -0.35, 0.0504, 0.75, -0.35, -0.0504, 0.6, -0.35, -0.0504, 0.85, -0.45, -0.0504, 0.75, -0.35, -0.0504, 0.6, -0.35, -0.0504, 0.6, -0.45, -0.0504, 0.85, -0.45, 0.0504, 0.75, -0.0504, -0.0504, 0.75, -0.1502, -0.0504, 0.75, -0.0504, 0.0504, 0.75, -0.0504, 0.0504, 0.75, -0.1502, -0.0504, 0.75, -0.1502, -0.0504, -0.3, 0.0504, -0.0504, 0.75, -0.0504, -0.0504, 0.85, 0.0504, -0.0504, -0.3, 0.0504, -0.0504, -0.3, -0.0504, -0.0504, 0.75, -0.0504, -0.0504, 0.85, 0.0504, 0.0504, 0.85, -0.1498, 0.0504, 0.85, 0.0504, -0.0504, 0.85, 0.0504, -0.0504, 0.85, -0.1498, 0.0504, 0.85, -0.1498, -0.0504, 0.6, -0.45, 0.0504, 0.85, -0.45, -0.0504, 0.85, -0.45, -0.0504, 0.6, -0.45, 0.0504, 0.6, -0.45, 0.0504, 0.85, -0.45, 0.0504, 0.6, -0.35, -0.0504, 0.6, -0.45, -0.0504, 0.6, -0.35, 0.0504, 0.6, -0.35, 0.0504, 0.6, -0.45, -0.0504, 0.6, -0.45, 0.0504, 0.85, 0.0504, 0.0504, 0.75, -0.1502, 0.0504, 0.75, -0.0504, 0.0504, 0.85, 0.0504, 0.0504, 0.85, -0.1498, 0.0504, 0.75, -0.1502, 0.0504, 0.75, -0.2502, -0.0504, 0.75, -0.35, -0.0504, 0.75, -0.2502, 0.0504, 0.75, -0.2502, 0.0504, 0.75, -0.35, -0.0504, 0.75, -0.35, 0.0504, 0.85, -0.2498, 0.0504, 0.75, -0.35, 0.0504, 0.75, -0.2502, 0.0504, 0.85, -0.2498, 0.0504, 0.85, -0.45, 0.0504, 0.75, -0.35, -0.0504, 0.85, -0.2498, 0.0504, 0.85, -0.45, 0.0504, 0.85, -0.2498, -0.0504, 0.85, -0.2498, -0.0504, 0.85, -0.45, 0.0504, 0.85, -0.45, -0.0504, 0.75, -0.0504, -0.0504, 0.85, -0.1498, -0.0504, 0.85, 0.0504, -0.0504, 0.75, -0.0504, -0.0504, 0.75, -0.1502, -0.0504, 0.85, -0.1498, 0.0504, 0.75, -0.2502, 0.0504, 0.85, -0.1498, 0.0504, 0.85, -0.2498, 0.0504, 0.75, -0.2502, 0.0504, 0.75, -0.1502, 0.0504, 0.85, -0.1498, -0.0504, 0.75, -0.2502, 0.0504, 0.75, -0.1502, 0.0504, 0.75, -0.2502, -0.0504, 0.75, -0.2502, -0.0504, 0.75, -0.1502, 0.0504, 0.75, -0.1502, -0.0504, 0.85, -0.2498, -0.0504, 0.75, -0.1502, -0.0504, 0.75, -0.2502, -0.0504, 0.85, -0.2498, -0.0504, 0.85, -0.1498, -0.0504, 0.75, -0.1502, -0.0504, 0.75, -0.2502, -0.0504, 0.85, -0.45, -0.0504, 0.85, -0.2498, -0.0504, 0.75, -0.2502, -0.0504, 0.75, -0.35, -0.0504, 0.85, -0.45, 0.0283, 0.85, -0.2278, 0.0504, 0.85, -0.1498, 0.0283, 0.85, -0.1718, 0.0283, 0.85, -0.2278, 0.0504, 0.85, -0.2498, 0.0504, 0.85, -0.1498, -0.0283, 0.85, -0.1718, -0.0504, 0.85, -0.2498, -0.0283, 0.85, -0.2278, -0.0283, 0.85, -0.1718, -0.0504, 0.85, -0.1498, -0.0504, 0.85, -0.2498, -0.0283, 0.85, -0.2278, 0.0504, 0.85, -0.2498, 0.0283, 0.85, -0.2278, -0.0283, 0.85, -0.2278, -0.0504, 0.85, -0.2498, 0.0504, 0.85, -0.2498, 0.0283, 0.85, -0.1718, -0.0504, 0.85, -0.1498, -0.0283, 0.85, -0.1718, 0.0283, 0.85, -0.1718, 0.0504, 0.85, -0.1498, -0.0504, 0.85, -0.1498, -0.0283, 0.85, -0.1718, 0.0283, 0.9, -0.1718, 0.0283, 0.85, -0.1718, -0.0283, 0.85, -0.1718, -0.0283, 0.9, -0.1718, 0.0283, 0.9, -0.1718, -0.0283, 0.9, -0.1718, 0.0538, 0.9, -0.1466, 0.0283, 0.9, -0.1718, -0.0283, 0.9, -0.1718, -0.0538, 0.9, -0.1466, 0.0538, 0.9, -0.1466, -0.0283, 0.85, -0.2278, -0.0283, 0.9, -0.1718, -0.0283, 0.85, -0.1718, -0.0283, 0.85, -0.2278, -0.0283, 0.9, -0.2278, -0.0283, 0.9, -0.1718, 0.0283, 0.85, -0.2278, -0.0283, 0.9, -0.2278, -0.0283, 0.85, -0.2278, 0.0283, 0.85, -0.2278, 0.0283, 0.9, -0.2278, -0.0283, 0.9, -0.2278, 0.0283, 0.85, -0.1718, 0.0283, 0.9, -0.2278, 0.0283, 0.85, -0.2278, 0.0283, 0.85, -0.1718, 0.0283, 0.9, -0.1718, 0.0283, 0.9, -0.2278, 0.0538, 0.9, -0.253, -0.0538, 0.9281, -0.253, -0.0538, 0.9, -0.253, 0.0538, 0.9, -0.253, 0.0538, 0.9281, -0.253, -0.0538, 0.9281, -0.253, -0.0283, 0.9, -0.2278, -0.0538, 0.9, -0.1466, -0.0283, 0.9, -0.1718, -0.0283, 0.9, -0.2278, -0.0538, 0.9, -0.253, -0.0538, 0.9, -0.1466, 0.0283, 0.9, -0.2278, -0.0538, 0.9, -0.253, -0.0283, 0.9, -0.2278, 0.0283, 0.9, -0.2278, 0.0538, 0.9, -0.253, -0.0538, 0.9, -0.253, 0.0283, 0.9, -0.1718, 0.0538, 0.9, -0.253, 0.0283, 0.9, -0.2278, 0.0283, 0.9, -0.1718, 0.0538, 0.9, -0.1466, 0.0538, 0.9, -0.253, 0.0538, 0.9281, -0.253, -0.0538, 0.9281, -0.1466, -0.0538, 0.9281, -0.253, 0.0538, 0.9281, -0.253, 0.0538, 0.9281, -0.1466, -0.0538, 0.9281, -0.1466, 0.0538, 0.9, -0.1466, 0.0538, 0.9281, -0.253, 0.0538, 0.9, -0.253, 0.0538, 0.9, -0.1466, 0.0538, 0.9281, -0.1466, 0.0538, 0.9281, -0.253, -0.0538, 0.9, -0.1466, 0.0538, 0.9281, -0.1466, 0.0538, 0.9, -0.1466, -0.0538, 0.9, -0.1466, -0.0538, 0.9281, -0.1466, 0.0538, 0.9281, -0.1466, -0.0538, 0.9, -0.253, -0.0538, 0.9281, -0.1466, -0.0538, 0.9, -0.1466, -0.0538, 0.9, -0.253, -0.0538, 0.9281, -0.253, -0.0538, 0.9281, -0.1466)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v22px"]
albedo_color = Color(0.458824, 0.619608, 0.623529, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nfyf1"]
albedo_color = Color(0.364706, 0.364706, 0.364706, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_a5hk7"]
_surfaces = [{
"aabb": AABB(-0.050434, -0.3, -0.45, 0.100868, 1.15, 0.500444),
"format": 34896613377,
"index_count": 156,
"index_data": PackedByteArray("AQAIAAoAAQADAAgAAwAJAAgAAwACAAkAAgALAAkAAgAAAAsAAQACAAMAAQAAAAIABwAEAAUABwAGAAQADQAFAAcADQAMAAUADwAHAAYADwANAAcADAAEAAUADAAOAAQACAAUAAoACAASABQAAAAKAAsAAAABAAoACwAZAAkACwAaABkADgAGAAQADgAPAAYADQAOAAwADQAPAA4ACQASAAgACQAZABIAEwAFABUAEwAHAAUAGAAHABMAGAAGAAcAGwAGABgAGwAEAAYACgAaAAsACgAUABoAEwAZABgAEwASABkAFQASABMAFQAUABIAGwAUABUAGwAaABQAFQAEABsAFQAFAAQAFgAZABcAFgAYABkAEAAbABEAEAAaABsAEQAYABYAEQAbABgAFwAaABAAFwAZABoA"),
"lods": [0.103981, PackedByteArray("AQALAAsACwAFAAsAAQADAAsAAwACAAsAAgAAAAsAAQACAAMAAQAAAAIABwAEAAUABwAGAAQABQAHAAQACwAHAAUAAAABAAsABwAGAAQACwAXAAcAFgAGAAcAGwAGABYAGwAEAAYABwAXABYAGwALAAUABQAEABsAEAAbABEAEQAbABYAEAALABsAFwALABAA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 28,
"vertex_data": PackedByteArray("AAAAAP3/AAAAAAAAZMwAAP//AAD9/wAA//8AAGTMAAAAAP//AAAAAAAAvOknMwAA/////wAAAAD//7zpJzMAAP//vOlkzAAA//////3/AAAAALzpZMwAAAAA///9/wAAAABYyCczAAD//1jIJzMAAAAAWMgAAAAA//9YyAAAAAAqOP//UY4AACo4//+scQAA//+86VmZAAD//7zpMmYAAAAAvOlZmQAAAAC86TJmAADUx///rHEAANTH//9RjgAA/////2tmAAD/////kpkAAAAA//+SmQAAAAD//2tmAAA=")
}, {
"aabb": AABB(-0.0537659, 0.85, -0.252972, 0.107532, 0.0781178, 0.106378),
"format": 34896613377,
"index_count": 78,
"index_data": PackedByteArray("AAAFAAMAAAAGAAUABgAJAAUABgAKAAkAAQAGAAAAAQAHAAYAAgAHAAEAAgAEAAcAAwAEAAIAAwAFAAQACAAPAAsACAAMAA8ABwAKAAYABwALAAoABAALAAcABAAIAAsABQAIAAQABQAJAAgADAAOAA8ADAANAA4ACQAMAAgACQANAAwACgANAAkACgAOAA0ACwAOAAoACwAPAA4A"),
"lods": [0.0362007, PackedByteArray("AAAFAAMAAQAFAAAAAQAHAAUABwAOAAUABQAOAA0ABwAPAA4ABQANAAwABAAPAAcABQAMAAQABAAMAA8AAgAHAAEAAgAEAAcAAwAEAAIAAwAFAAQADAAOAA8ADAANAA4A"), 0.0461794, PackedByteArray("AAAHAAMAAQAHAAAAAgAHAAEAAwAHAAIABwANAA8ABwAPAA0A"), 0.0695281, PackedByteArray("AAAHAAMAAQAHAAAAAgAHAAEAAwAHAAIA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("nTwAAGHDAACdPAAAnTwAAGHDAACdPAAAYcMAAGHDAABhw9qjnTwAAGHD2qNhwwAAnTzao2HDAACdPNqjnTwAAP//2qMAAAAA///ao///AAAAANqj//8AAAAA2qMAAAAA/////wAAAAD///////8AAAAA/////wAAAAD//wAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ye4b8"]
resource_name = "tap_Cube"
_surfaces = [{
"aabb": AABB(-0.050434, -0.3, -0.45, 0.100868, 1.15, 0.500444),
"attribute_data": PackedByteArray("/x//P/9fAAD/X////x//f/9f/7//X/8//1//f/+fAAD/n/+//5////+f/7//n/8//5//f/+f/3//n/9//5//P/+f/7//nwAA/5////+f/7//n/9//5//v/+f/3//n1gG/59YBv+f/3//n/9//5//v/+f/7//n6c5/5+nOf+f/z//n/8//58AAP+f////nwAA/5////8f/z//XwAA/1////8f/3//H/9//1//v/9f/7//X/8//1//P/9f/z//X/8//1//f/9f/3//X/9//58AAP+f/7//n/+//5//v/+f/7//n////5//v/+f/7//n/+//5//v/+f/7//n/8//5//P/+f/z//n/9//5//f/+f/3//n/9//5//f/+f/3//n/9//5//f/+f/3//n/9//58AAP+fAAD/nwAA/58AAP+fAAD/nwAA/58AAP+f////n////59YBv+fWAb/n6c5/5+nOf+fpzn/n6c5/5+nOf+fpzn/n6c5/58AAP+fAAD/nwAA/5////+f//8="),
"format": 34896613399,
"index_count": 156,
"index_data": PackedByteArray("BAAOABAABAAGAA4ABgAPAA4ABgAFAA8ABQARAA8ABQABABEAAwAFAAYAAwAAAAUADQAIAAoADQAMAAgAFAAKAA0AFAATAAoAFgANAAwAFgAUAA0AEwAIAAoAEwAVAAgADgAbABAADgAZABsAAgAQABIAAgAEABAAEQAgAA8AEQAhACAAFQAMAAgAFQAWAAwAFAAVABMAFAAWABUADwAZAA4ADwAgABkAGgAKABwAGgANAAoAHwANABoAHwALAA0AIwALAB8AIwAHAAsAEAAiABIAEAAbACIAGgAgAB8AGgAZACAAHAAZABoAHAAbABkAJAAbABwAJAAiABsAHAAJACQAHAAKAAkAHQAgAB4AHQAfACAAFwAjABgAFwAhACMAGAAfAB0AGAAjAB8AHgAhABcAHgAgACEA"),
"lods": [0.103981, PackedByteArray("BAARABIAEQAKABIAKgAwAEsAMQAsAEwALQAmAE0AKAAuADIAKQAlAC8AQwA0ADkARABBADUAOgBFADYATgBGADsAJwArAFIARwBCADcATwBaAEgAVgA+AEkAXQA/AFcAXgAzAEAASgBbAFgAYABTADwAPQA4AGEAVABfAFUAVQBfAFkAVABQAF8AXABRAFQA")],
"material": SubResource("StandardMaterial3D_v22px"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 98,
"vertex_data": PackedByteArray("AAAAAP3/P6gAAAAA/f9z0QAAAAD9/3PRAAAAAGTMk+EAAAAAZMwa+///AAD9/4C2//8AAGTM6toAAP//AACL7wAA//8AAIvvAAD//wAAi+8AALzpJzMuRf////8AAIvv/////wAAi+///7zpJzMuRf//vOlkzLHV//////3/c9EAALzpZMxb5QAA///9/0rAAAD///3/SsAAAFjIJzNpXP//WMgnM2lcAABYyAAAadz//1jIAABp3Co4//9RjiI6Kjj//6xxXuz//7zpWZn/v///vOkyZv+/AAC86VmZ/78AALzpMmb/v9TH//+scT7P1Mf//1GOBij/////a2YzxP////+SmVQWAAD//5KZ/78AAP//kpn/vwAA//9rZh/0AAD//2tm/78AAAAA/f/isQAAAAD9/3zQAAAAAP3/KNEAAAAAZMyO1QAAAABkzH/GAAAAAGTMT/YAAAAAZMz56P//AAD9/4vB//8AAP3/Oaj//wAA/f+i0P//AAD9/xG2//8AAGTMDOT//wAAZMw2yf//AABkzPnTAAD//wAAptgAAP//AADq4QAA//8AADjoAAD//wAAxdgAAP//AABD6wAA//8AAPHlAAC86SczvTMAALzpJzNzNgAAvOknMwxCAAC86SczeDIAALzpJzOgIv////8AAJPe/////wAAQdn/////AACr3P////8AAFbm/////wAAveX//7zpJzNQOP//vOknM1wg//+86SczljH//7zpJzO/Qf//vOknM0gY//+86Scz1UP//7zpJzM/L///vOknM7hBAAD///3/POkAAP///f8DvQAA///9/3S1AAD///3/X88AAP///f+6wgAA///9/17LAAD///3/LsUAAP///f+fwgAA///9/4vSKjj//1GOJTkqOP//rHGw6NTH//+scXe91Mf//6xxf9bUx///rHFQu9TH//+scQzU1Mf//1GOAADUx///UY4rCtTH//9RjqYuAAD//2tmgOcAAP//a2b//wAA//9rZuzqAAD//2tmpcAAAP//a2YC45xCGa8w0LP5MNCz+bEnn4v6ylDXaxHLOOMnMEuDsXvOg7F7zoOxe85IL0evg7GDMYOxgzFIL7dQUyxsN84vSwaGzm3YufjFyLn4xcixJ7CnsSdOWLEnsKexJ05YG6JSr4DSUCl9JYJafSWCWn0lfKV9JXylc9HpP3qp5Z3fuiEiBLX1lYHafKWB2nylX+JbLYHafKWkMDqmTNfH/jXNVPFhLTVw/ilchK0saVL72oXidBvmOaAJs9wUBmRXbA2TxikTlGdUKDw/HxzBU0rZtKb0E/OT/jkBRuIk4qRlOppFBm8G70UXRJddJV2lDxUOlXm9hcKcQ5vDZrVmNc/1z3WZ42WcIFLeLfZHCTiiH11gvDxDQ/AT8JNgBGCEF0DnPyZA2T+UupU6dMl0SRcdqm6aMF0urv7l3zsRmHDoOf0jBPe/vkP8TD+M633cHOspw82f1bMo0xIr4allL2/ViECRru0ydNwURjO9j3yTuQyHyKJyqfbN/iQh3LEiHNu2K43NcbIEZQTl")
}, {
"aabb": AABB(-0.0537659, 0.85, -0.252972, 0.107532, 0.0781178, 0.106378),
"attribute_data": PackedByteArray("/59YBv+fWAb/n6c5/5+nOf+fpzn/n6c5/59YBv+fWAb/n6c5/5+nOf+fWAb/n1gG/5+nOf+fpzn/n1gG/59YBv+fWAb/n1gG/59YBv+fWAb/n6c5/5+nOf+fpzn/n6c5/59YBv+fWAb/n1gG/59YBv+fWAb/n1gG/59YBv+fWAb/n6c5/5+nOf+fpzn/n6c5/59YBv+fWAb/n1gG/59YBv+fWAb/n1gG/5+nOf+fpzn/n1gG/59YBv+fWAb/n1gG/59YBv+fpzn/n6c5/5+nOf+fpzn/n6c5/5+nOf+fpzn/n6c5/5+nOf+fpzn/n6c5/5+nOf+fWAb/n1gG/5+nOf+fpzn/n6c5/59YBv+fWAb/n1gG"),
"format": 34896613399,
"index_count": 78,
"index_data": PackedByteArray("AAAFAAMAAAAGAAUABgAJAAUABgAKAAkAAQAGAAAAAQAHAAYAAgAHAAEAAgAEAAcAAwAEAAIAAwAFAAQACAAPAAsACAAMAA8ABwAKAAYABwALAAoABAALAAcABAAIAAsABQAIAAQABQAJAAgADAAOAA8ADAANAA4ACQAMAAgACQANAAwACgANAAkACgAOAA0ACwAOAAoACwAPAA4A"),
"lods": [0.0362007, PackedByteArray("LQA6ADQALwA7AC4AAQAHAAUABwAOAAUABQAOAA0ABwAPAA4ABQANAAwABAAPAAcABQAMAAQABAAMAA8AMQA9ADAAMgA3AD4ANQA4ADMANgA8ADkAPwBCAEQAQABBAEMA"), 0.0461794, PackedByteArray("HAAkACIAHgAlAB0AIAAmAB8AIwAnACEAKAAqACwAKQAPACsA"), 0.0695281, PackedByteArray("EAAYABYAEgAZABEAFAAaABMAFwAbABUA")],
"material": SubResource("StandardMaterial3D_nfyf1"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 69,
"vertex_data": PackedByteArray("nTwAAGHDykydPAAAnTzKzGHDAACdPMrMYcMAAGHDykxhw9qjnTzKzGHD2qNhw8pMnTzao2HDykydPNqjnTzKzP//2qMAAGnc///ao///aVwAANqj//9pXAAA2qMAAGnc/////wAAaA7///////9BHAAA/////2hOAAD//wAAviOdPAAAYcOqYZ08AABhw5s8nTwAAJ08Ds6dPAAAnTzw0mHDAACdPHnXYcMAAJ08JeBhwwAAYcPtdGHDAABhw+NKnTzao508p46dPNqjnTz62J082qOdPKnvnTzao508FcmdPAAAYcPzap08AABhw6E8nTwAAJ08WsydPAAAnTxQ2WHDAACdPM7bYcMAAJ082sphwwAAYcPCYWHDAABhw4BGnTzao508WaGdPNqjnTyB3Z082qOdPJbsnTzao508ws2dPNqjnTxY7J082qOdPEOe////////AAD///////9RPAAA//8AAAAAnTwAAGHDDVadPAAAYcMYUJ08AACdPADGnTwAAJ08e+BhwwAAnTx/4GHDAACdPHfuYcMAAJ08bslhwwAAYcPOU2HDAABhwz06YcMAAGHDdF5hw9qjnTyt3GHD2qOdPJHgYcPao508MLthw9qjYcPqZWHD2qNhw3hLYcPao2HDRU6dPNqjnTzZ7Z082qOdPMvd/////wAARi//////AADSNP///////6ocAAD/////ODMAAP////+eNgAA//8AAOwgFe7okRXu6JEV7hZuFe4WbukRFm7pERZu6RHokekR6JGxJ05YsSdOWLEnsKexJ7CnQcJxm0Cm14/wl8y5jaCXztTcKaN94ICfvOFBniDy3o3W/iiBA4QEBPnXBaiqPFVDpcJZvbDHTbhXOle6ZDibR2UvZK+R5Gyb2uUjmpHwbI+p+FWHRNREVJgKl4pkyGVIQRJBkhrA47+2MrayjMaMRgqlCyXpTOnMxsZVjrVpfb3vbNmo/fb9dq89rr2zyEu31+smlIj3doizyLRIn+CfYFHwUXAw3zFfMlbMKSYS2W0cbOITpyRXW+3d7V10M3Sz3CEiXj3bwaSZBmV50b4HrDvG15/poG6cRK4cpEW295hbpZ29")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_a5hk7")

[sub_resource type="BoxShape3D" id="BoxShape3D_02q56"]
size = Vector3(0.1, 0.5, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0cuvr"]
shading_mode = 0
albedo_color = Color(1.2899e-05, 0.600519, 0.917973, 1)

[sub_resource type="BoxMesh" id="BoxMesh_oribu"]
material = SubResource("StandardMaterial3D_0cuvr")
size = Vector3(0.05, 1, 0.05)

[node name="tap" type="StaticBody3D"]
script = ExtResource("1_xli81")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_onfnh")

[node name="model" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_ye4b8")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.576962, -0.402048)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.279694, 0)
shape = SubResource("BoxShape3D_02q56")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0970601, -0.39897)
visible = false
mesh = SubResource("BoxMesh_oribu")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
